k8s/legacy-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: siem-service
  namespace: homelab-siem
  labels:
    app.kubernetes.io/name: homelab-siem
    app.kubernetes.io/component: service
spec:
  type: NodePort
  selector:
    app: homelab-siem
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30500
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: siem-syslog
  namespace: homelab-siem
  labels:
    app.kubernetes.io/name: homelab-siem
    app.kubernetes.io/component: syslog
spec:
  type: NodePort
  selector:
    app: homelab-siem
  ports:
    - name: syslog-udp
      port: 5140
      targetPort: syslog-udp
      nodePort: 30514
      protocol: UDP
